deleted closing div

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   </header>
 
   <section class="hero">
-    <div class="container"></div>
-    <h2>A Sassy Base Site</h2>
-    <p>This is a simple, single page website, built with SASS.</p>
-    <a class="button">Go to Typography</a>
+    <div class="container">
+      <h2>A Sassy Base Site</h2>
+      <p>This is a simple, single page website, built with SASS.</p>
+      <a class="button">Go to Typography</a>
     </div>
   </section>
 
