--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 
   <!-- ADOBE FONTS-->
   <link rel="stylesheet" href="https://use.typekit.net/bnm7oer.css">
-
-
 </head>
 
 <body>
 
   <header class="site-header">
     <div class="site-id">
-      <h1><a href="#">Sassy Base 2019</a></h1>
+      <h1><a href="#">SD19</a></h1>
     </div>
-
     <nav class="site-nav">
+      <div class="menu-button">Menu</div>
       <ul>
         <li><a href="#typography">Typography</a></li>
         <li><a href="#layout">Layout</a></li>
@@ -35,43 +33,20 @@
 
   <section class="hero">
     <div class="container">
-      <h2>A Sassy Base Site</h2>
-      <p>This is a simple, single page website, built with SASS.</p>
-      <a class="button">Go to Typography</a>
+      <h2>A Sassy Demo 2019</h2>
+      <p>This is a custom single page demo website, built with SASS BASE.</p>
+      <a href="#typography" class="button dark">Go to Typography</a>
     </div>
   </section>
 
   <section id="typography">
     <div class="container">
-      <h3 class="sectionhead">Typography</h3>
-      <p class="meta">Type Specimen</p>
-
-      <h1>Heading1</h1>
-      <h2>Heading2</h2>
-      <h3>Heading3</h3>
-
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#">Link</a>Lorem Ipsum has
-        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged. </p>
-
-      <p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-
-
-      <hr />
-      <small class="meta">Type Specimen</small>
 
       <h1 class="mainhead">Headline Title</h1>
       <h2 class="subhead">This is a Subheader</h2>
-
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#">Link</a>Lorem Ipsum has
-        been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-        electronic typesetting, remaining essentially unchanged. </p>
-
-      <p> It was popularised in <b>the 1960s</b> with the release of Letraset sheets containing Lorem Ipsum passages,
-        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        been the industry's standard dummy text ever since the <em>1500s</em>, when an <strong>unknown </strong>printer
+        took a galley of type and scrambled it to make a type specimen book.</p>
 
       <button>This is a Button</button>
       <a class="button">This is a Button Link</a>
@@ -80,95 +55,38 @@
     </div>
   </section>
 
-  <section id="layout">
-
+  <section id="layout" class="split-crossed-left">
     <div class="container">
 
-      <h3 class="sectionhead">Layout</h3>
-
-      <small class="meta">Images</small>
-      <img src="../img/img1500x500.png" alt="1500x500">
-
-      <hr />
-
-      <small class="meta">Grid</small>
-      <div class="row demo">
-        <div class="column">Column</div>
+      <div class="image-block">
+        <img src="../img/img1500x500.png" alt="1500x500">
       </div>
 
-
-      <div class="row demo">
-        <div class="column one-half">&frac12;</div>
-        <div class="column one-half">&frac12;</div>
+      <div class="text-block">
+        <h4>Text on the Right</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          crambled it to make a type specimen book. </p>
       </div>
-
-      <div class="row demo">
-        <div class="column one-third">&frac13; Column</div>
-        <div class="column one-third">&frac13; Column</div>
-        <div class="column one-third">&frac13; Column</div>
-      </div>
-
-      <div class="row demo">
-        <div class="column one-third">&frac13; Column</div>
-        <div class="column two-thirds">&frac23; Column</div>
-      </div>
-
-      <div class="row demo">
-        <div class="column one-fourth">&frac14; Column</div>
-        <div class="column one-fourth">&frac14; Column</div>
-        <div class="column one-fourth">&frac14; Column</div>
-        <div class="column one-fourth">&frac14; Column</div>
-      </div>
-
-      <hr />
-
-      <div class="row">
-        <div class="one-half column ">
-          <img src="../img/img500x500.png" alt="500x500">
-        </div>
-        <div class="one-half column">
-          <h4>Text on the Right</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-            typesetting, remaining essentially unchanged. </p>
-        </div>
-      </div>
-
-
-      <div class="row swap">
-        <div class="one-half column">
-          <img src="../img/img500x500.png" alt="500x500">
-        </div>
-        <div class="one-half column">
-          <h4>Text on the Left</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-            typesetting, remaining essentially unchanged. </p>
-        </div>
-      </div>
-
-      <div class="row center">
-        <div class="one-half column">
-          <img src="../img/img500x500.png" alt="500x500">
-        </div>
-        <div class="one-half column">
-          <h4>Text on the Center</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's
-            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-            make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-            typesetting, remaining essentially unchanged. </p>
-        </div>
-      </div>
-
     </div>
   </section>
 
-  </div>
+  <section class="split-crossed-reversed">
+    <div class="container">
+
+      <div class="image-block">
+        <img src="../img/img1500x500.png" alt="1500x500">
+      </div>
+
+      <div class="text-block">
+        <h4>Text on the Left</h4>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.</p>
+      </div>
+    </div>
+  </section>
+
   <footer class="site-footer">
     <nav class="site-nav">
       <ul>
@@ -178,13 +96,15 @@
       </ul>
     </nav>
   </footer>
-  <!-- SMOOTH SCROLL JS-->
 
+  <!-- SMOOTH SCROLL JS-->
   <script src="js/smooth-scroll.polyfills.min.js"></script>
   <script>
     var scroll = new SmoothScroll('a[href*="#"]');
-
   </script>
+
+  <!--MAIN JS -->
+  <script src="js/script.js"></script>
 
 </body>
 
