--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
     <nav class="site-nav">
       <div class="menu-button">Menu</div>
       <ul>
+        <li><a href="#home">Home</a></li>
         <li><a href="#typography">Typography</a></li>
         <li><a href="#layout">Layout</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="hero">
     <div class="container">
-      <h2>A Sassy Demo 2019</h2>
+      <h2>Miyuk's Sassy Demo 2019</h2>
       <p>This is a custom single page demo website, built with SASS BASE.</p>
       <a href="#typography" class="button dark">Go to Typography</a>
     </div>
@@ -49,8 +51,8 @@
         took a galley of type and scrambled it to make a type specimen book.</p>
 
       <button>This is a Button</button>
-      <a class="button">This is a Button Link</a>
-      <a class="button alt">This is a Button Link Alt</a>
+      <a class="button" href="#">This is a Button Link</a>
+      <a class="button alt" href="#">This is a Button Link Alt</a>
 
     </div>
   </section>
