--- a/index.html
+++ b/index.html
@@ -20,24 +20,29 @@
 
   <header class="site-header">
     <div class="site-id">
-      <h1><a href="#">SD19</a></h1>
+      <h1><a href="index.html">Miyuki Sekiguchi</a></h1>
     </div>
     <nav class="site-nav">
       <div class="menu-button navicon">Menu</div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#typography">Typography</a></li>
-        <li><a href="#layout">Layout</a></li>
-        <li><a href="#contact">Contact</a></li>
+
+        <li><a href="work">work</a></li>
+        <li><a href="about me">about me</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="hero">
     <div class="container">
-      <h2>Miyuk's Sassy Demo 2019</h2>
-      <p>This is a custom single page demo website, built with SASS BASE.</p>
-      <a href="#typography" class="button dark">Go to Typography</a>
+      <h2>Portfolio</h2>
+      <p>I am Miyuki, an Interface Design student in the New Media Arts Program at Kapi‘olani Community College.</p>
+      <div class="half-circles">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+      </div>
     </div>
   </section>
 
@@ -92,9 +97,9 @@
   <footer class="site-footer">
     <nav class="site-nav">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#typography">Typography</a></li>
-        <li><a href="#layout">Layout</a></li>
+        <li><a href="#work">work</a></li>
+        <li><a href="#about me">about me</a></li>
+        <li><a href="#contact">ontact</a></li>
       </ul>
     </nav>
   </footer>
